--- a/reskillingcenter27.html
+++ b/reskillingcenter27.html
@@ -47,12 +47,12 @@
       {x:3, y:1, name:"古屋",    color:"#2bb6f6", hair:"#519be3", msg:"こんにちは。古屋です。困ったことがあれば何でも言ってください。"},
       {x:19, y:1, name:"川端",   color:"#fd924c", hair:"#ecab57", msg:"やあ！川端です。最近暑いですね。"},
       {x:8, y:3, name:"工藤",    color:"#8b6ef7", hair:"#ab78ef", msg:"どうも工藤です。今日のランチは何にしようかな？"},
-      {x:1, y:3, name:"戸巻",    color:"#38c377", hair:"#1b7b55", msg:"戸巻です。納期、ちゃんと守りましょうね。"},
+      {x:1, y:3, name:"戸巻",    color:"#38c377", hair:"#1b7b55", msg:"戸巻です。やっぱりコーヒーがいいですね。"},
       {x:17, y:3, name:"安藤",   color:"#fcd74a", hair:"#efc73e", msg:"安藤です。困ったらなんでも相談してください。"},
       {x:4, y:5, name:"渡辺",    color:"#fe8ba9", hair:"#e37c97", msg:"渡辺です。今週は出張多めです。"},
       {x:11, y:3, name:"飯森",   color:"#bc66fc", hair:"#7e4ef5", msg:"飯森です。コーヒー飲み過ぎ注意！"},
       {x:15, y:1, name:"正木",   color:"#ff964f", hair:"#e0824a", msg:"正木です。最近ジム通い始めました。"},
-      {x:9, y:2, name:"佐藤あ",  color:"#00aaa7", hair:"#268f8c", msg:"佐藤あです。今日はとても良い天気ですね！"}
+      {x:9, y:2, name:"佐藤(あ)",  color:"#00aaa7", hair:"#268f8c", msg:"佐藤(あ)です。今日はとても良い天気ですね！"}
     ];
     const TRAIN_NPCS = [
       {x:10, y:2, name:"サラリーマン", color:"#727fae", hair:"#2a355b", msg:"（寝ている...）"},
@@ -67,7 +67,7 @@
       [1,0,0,2,0,0,2,0,0,2,0,0,2,0,0,2,0,0,2,0,0,1],
       [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],
       [1,6,0,0,7,0,0,0,3,0,8,0,0,0,0,0,0,0,0,0,0,1],
-      [1,1,1,1,1,1,1,1,1,4,1,1,1,1,1,1,1,1,1,1,1,1],
+      [1,1,1,1,1,1,1,1,1,5,1,1,1,1,1,1,1,1,1,1,1,1],
       [1,0,0,0,0,0,0,0,0,9,0,0,0,0,0,0,0,0,0,0,0,1],
       [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],
       [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]
