--- a/reskillingcenter27.html
+++ b/reskillingcenter27.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>オフィスRPG マップ切替マーカーver</title>
+  <title>リスキRPG</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <style>
     html,body { margin:0; padding:0; background: #e5e7ea;}
@@ -431,3 +431,4 @@
   </script>
 </body>
 </html>
+
