--- a/reskillingcenter27(2).html
+++ b/reskillingcenter27(2).html
@@ -44,20 +44,20 @@
 
     // ========== NPC・セリフ・色 ==========
     const NPC_DATA = [
-      {x:3, y:1, name:"栗山",    color:"#2bb6f6", hair:"#519be3", msg:"こんにちは。栗山です。困ったことがあれば何でも言ってください。"},
-      {x:19, y:1, name:"齋藤",   color:"#fd924c", hair:"#ecab57", msg:"やあ！齋藤です。最近暑いですね。"},
-      {x:8, y:3, name:"李",    color:"#8b6ef7", hair:"#ab78ef", msg:"どうも李です。今日のランチは何にしようかな？"},
-      {x:1, y:3, name:"惟文",    color:"#38c377", hair:"#1b7b55", msg:"惟文です。やっぱりコーヒーがいいですね。"},
-      {x:17, y:3, name:"高津",   color:"#fcd74a", hair:"#efc73e", msg:"高津です。困ったらなんでも相談してください。"},
-      {x:4, y:5, name:"新倉",    color:"#fe8ba9", hair:"#e37c97", msg:"新倉です。今週は出張多めです。"},
-      {x:11, y:3, name:"野中",   color:"#bc66fc", hair:"#7e4ef5", msg:"野中です。コーヒー飲み過ぎ注意！"},
-      {x:15, y:1, name:"彰太",   color:"#ff964f", hair:"#e0824a", msg:"彰太です。最近ジム通い始めました。"},
-      {x:9, y:2, name:"藤野",  color:"#00aaa7", hair:"#268f8c", msg:"藤野です。今日はとても良い天気ですね！"}
+      {x:3, y:1, name:"栗山",    color:"#2bb6f6", hair:"#519be3", msg:"栗山です。ぜひフットサルにご参加ください。"},
+      {x:19, y:1, name:"齋藤",   color:"#fd924c", hair:"#ecab57", msg:"齋藤です。リスキ来ると頭痛くなるんですよ"},
+      {x:8, y:3, name:"李",    color:"#8b6ef7", hair:"#ab78ef", msg:"李です。今日は何食べようかな"},
+      {x:1, y:3, name:"惟文",    color:"#38c377", hair:"#1b7b55", msg:"惟文です。やっぱり美容は大事！"},
+      {x:17, y:3, name:"高津",   color:"#fcd74a", hair:"#efc73e", msg:"高津です。イネーブルメントに戻ります"},
+      {x:4, y:5, name:"新倉",    color:"#fe8ba9", hair:"#e37c97", msg:"新倉です。セキュリティ対策お願いします"},
+      {x:11, y:3, name:"野中",   color:"#bc66fc", hair:"#7e4ef5", msg:"野中です。リファラル積極採用中！"},
+      {x:15, y:1, name:"彰太",   color:"#ff964f", hair:"#e0824a", msg:"彰太です。Agentforceスペシャリスト取ってない人いる？"},
+      {x:9, y:2, name:"藤野",  color:"#00aaa7", hair:"#268f8c", msg:"藤野です。youtube投稿しました"}
     ];
     const TRAIN_NPCS = [
-      {x:10, y:2, name:"サラリーマン", color:"#727fae", hair:"#2a355b", msg:"（寝ている...）"},
-      {x:14, y:2, name:"OL", color:"#f0c7b4", hair:"#efc8b8", msg:"今日もお仕事、がんばろう。"},
-      {x:5, y:3, name:"学生", color:"#49b55d", hair:"#3e673a", msg:"電車で勉強中..."}
+      {x:10, y:2, name:"工藤", color:"#727fae", hair:"#2a355b", msg:"工藤です。あれ？こんなところで"},
+      {x:14, y:2, name:"古屋", color:"#f0c7b4", hair:"#efc8b8", msg:"古屋です。君も午後出社？"},
+      {x:5, y:3, name:"安藤", color:"#49b55d", hair:"#3e673a", msg:"安藤です。最近仕事忙しいよ"}
     ];
     // ======= マップデータ =======
     const officeMap = [
